--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 path.filesystem.log=C\:\\Users\\Public\\
-filesystem.nomearquivo=Bitcoin
+filesystem.nomearquivo=Bitcoin.txt
+percentual.lucro=0.008
+path.wallet.fake=C\:\\Users\\Public\\
+nome.wallet.fake=walletFake.txt
