--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 path.filesystem.log=C\:\\Users\\Public\\
-filesystem.nomearquivo=Bitcoin.txt
+filesystem.nomearquivo=LogBitcoin.txt
 percentual.lucro=0.008
 path.wallet.fake=C\:\\Users\\Public\\
 nome.wallet.fake=walletFake.txt
+path.ultimo.valor=C\:\\Users\\Public\\
+path.ultimo.valor=ultimoValor.txt
